--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,16 +1,24 @@
 <h2>Por Region</h2>
 <hr />
 <div class="row">
-  <div class="col">
-    <shared-search-box
-      (onValue)="searchByRegion($event)"
+  <div class="col text-center">
+    <!-- <shared-search-box
+      (onDebounce)="searchByRegion($event)"
       placeholder="Buscar por Region"
-    ></shared-search-box>
+    ></shared-search-box> -->
+    <button
+      *ngFor="let region of Regions"
+      class="btn mx-2"
+      [ngClass]="{ 'btn-outline-primary': selectedRegion === region }"
+      (click)="searchByRegion(region)"
+    >
+      {{ region }}
+    </button>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
-    <countries-table [countries]="countries" ></countries-table>
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
